# binary-tsan

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: AddTests.cmake  GetCTestsuite.cmake  GetCoreutils.cmake  c-testsuite.patch.in  coreutils.patch.in
data/: DataRace_Results.csv  DataSet_Logdata.csv  DataSet_OptimizationLevel.csv  Performance_Instrumentation.csv  Performance_Instrumentation_vs_Instruction.csv  Performance_Runtime.csv  Performance_Runtime_DRA.csv  fileSizeComparison.csv  table_atomOpsHeuristicsWithGroundTruth.csv
eval/: .gitignore  fuzz_mc.sh  fuzz_sc.sh  instrument.sh  zafl.sh
examples/problems/: p1.c  p1.sh
libtsan/: CMakeLists.txt
libtsan/interception/: CMakeLists.txt
libtsan/sanitizer_common/: CMakeLists.txt  sanitizer_allocator_checks.h  sanitizer_allocator_report.cpp
libtsan/tsan/: CMakeLists.txt  tsan_defs.h  tsan_flags.cpp  tsan_interface_ann.cpp  tsan_mman.cpp  tsan_rtl.cpp
scripts/: benchmark_instrumenting_parsec.py  eval_precision.py  filecheck.py  find-single-function-error.py  instrument-all.sh  logs2csv.py  parsec_benchmark.py  parsec_diff  run-omp-tests.py  run-tsan-tests.py  thread-sanitizer-with-dependencies.py  thread-sanitizer.sh.in
src/: CMakeLists.txt  fixedpointanalysis.h  pointeranalysis.cpp  tsan.cpp  tsantransform.cpp  tsantransform.h
src/common/: CMakeLists.txt  attribution.h  helper.h  simplefile.h  stringhelper.h
src/instructionmap-plugin/: CMakeLists.txt  instructionmap.cpp  instructionmap.h
src/profiler/: CMakeLists.txt  profiler.cpp
src/protobuf/: CMakeLists.txt  instrumentationmap.proto
src/stacktrace-translation/: CMakeLists.txt  stacktracetranslation.cpp
src/tsan/: CMakeLists.txt  analysis.cpp  analysis.h  annotations.cpp  annotations.h  cfgtodot.cpp  cfgtodot.h  controlflowgraph.cpp  controlflowgraph.h  deadregisteranalysis.cpp  deadregisteranalysis.h  exceptionhandling.cpp  exceptionhandling.h  fixedpointanalysis.cpp  fixedpointanalysis.h  function.cpp  function.h  instruction.cpp  instruction.h  instructioninserter.h  options.cpp  options.h  pointeranalysis.cpp  pointeranalysis.h  program.cpp  program.h  register.cpp  register.h  tsan.cpp  tsantransform.cpp  tsantransform.h
testing/: Makefile  test  test.cpp  test.fuzz  test.san  test.san.instrinfo  test.sanzaf  test.zaf  zafl.sh
testing/fuzzing/: fuzz.sh  instrument.sh  ls.san.instrinfo
testing/fuzzing/targets_instrumented/: ls.san  ls.sanzaf  ls.zaf
tests/assembly/: atomic_cmpxchg_rdi.s  functionloop.s  rep_movs.s
tests/atomics/: atomic_add_fetch.cpp  atomic_add_fetch2.cpp  atomic_compare_exchange.cpp  atomic_compare_exchange2.cpp  atomic_exchange.cpp  atomic_exchange2.cpp  atomic_fetch_add.cpp  atomic_fetch_add2.cpp  atomic_fetch_and.cpp  atomic_fetch_or.cpp  atomic_fetch_sub.cpp  atomic_fetch_sub2.cpp  atomic_fetch_xor.cpp  atomic_inc.cpp
tests/bugs/: floatreturn.cpp  stackframe.c  tailcall-arguments.cpp  tailcall-exception.cpp
tests/llvm-tsan-tests/: atexit4.cpp  atexit5.cpp  atomic_free.cpp  atomic_free3.cpp  atomic_stack.cpp  atomic_store.cpp  custom_mutex1.cpp  custom_mutex5.cpp  dtls.c  exceptions.cpp  extended_precision_float.cpp  global_race.cpp  global_race2.cpp  global_race3.cpp  ignorelist2.cpp  malloc_stack.cpp  memcmp_race.cpp  memcpy_race.cpp  mutex_destroy_locked.cpp  mutex_destroy_locked2.cpp  mutex_double_lock.cpp  mutex_lock_destroyed.cpp  mutexset1.cpp  mutexset2.cpp  mutexset3.cpp  mutexset4.cpp  mutexset5.cpp  mutexset6.cpp  mutexset7.cpp  mutexset8.cpp  on_exit.cpp  race_on_mutex.c  signal_errno.cpp  signal_malloc.cpp  signal_reset.cpp  simple_stack.c  simple_stack2.cpp  thread_end_with_ignore3.cpp  thread_leak3.c  tls_race.cpp  (+2 more)
tests/openmp/critical/: critical.c
tests/openmp/ompt/: ompt-signal.h
tests/openmp/races/: critical-unrelated.c  lock-nested-unrelated.c  lock-unrelated.c  parallel-simple.c  task-dependency.c  task-taskgroup-unrelated.c  task-taskwait-nested.c  task-two.c
tests/openmp/task/: task-barrier.c  task-create.c  task-dependency.c  task-taskgroup-nested.c  task-taskgroup.c  task-taskwait-nested.c  task-taskwait.c
tests/repstring/: rep_cmps.c  rep_movs.c  rep_scas.c  rep_stos.c
tools/: FileCheck  not
